[gd_scene format=3 uid="uid://dh482188jgebd"]

[ext_resource type="Script" uid="uid://cvxv2mlw82qs8" path="res://Scripts/blob.gd" id="1_xk3th"]
[ext_resource type="Texture2D" uid="uid://by80jrtffhc5a" path="res://Assets/Monster/pull/ZiehenExistenz.png" id="2_jqg24"]
[ext_resource type="Texture2D" uid="uid://37pfy87dg2lr" path="res://Assets/Monster/pull/Untitled 26.png" id="3_kst1h"]
[ext_resource type="Texture2D" uid="uid://cbooiwhaweok5" path="res://Assets/Monster/pull/ZiehenAttacke.png" id="4_m4n8d"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fun41"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jqg24")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kst1h")
}],
"loop": true,
"name": &"dying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_m4n8d")
}],
"loop": true,
"name": &"jumpscare",
"speed": 9.0
}]

[node name="MonsterPull" type="Node2D" unique_id=95978076]
script = ExtResource("1_xk3th")
metadata/BopitAction = "PULL"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1941309922]
texture_filter = 1
position = Vector2(32.5, 34.064514)
scale = Vector2(3.0312498, 3.1290321)
sprite_frames = SubResource("SpriteFrames_fun41")
animation = &"jumpscare"

[node name="AttackTimer" type="Timer" parent="." unique_id=1544280131]
wait_time = 3.0

[node name="RevealTimer" type="Timer" parent="." unique_id=1257436170]
wait_time = 4.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="AnimationFinished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="AnimationFinished"]
[connection signal="timeout" from="AttackTimer" to="." method="TriggerJumpscare"]
